# mina-network-debugger

./: .drone.yml  Cargo.toml  Dockerfile  README.md  collect_summary.sh  config.ron  dev-dockerfile  mina-deploy.tar  plan.md  print_decrypt_error.sh  run-aggregator.sh  run.sh  run.yaml  run_insecure.sh  simulate_main.sh  simulate_split.sh  tester-k.dockerfile  viewer.sh
bpf-recorder/: Cargo.toml  build.rs
bpf-recorder/src/: context.rs  lib.rs  main.rs  proc.rs  report.rs  send.rs
bpf-ring-buffer/: Cargo.toml
bpf-ring-buffer/src/: lib.rs
docker/: Dockerfile  README.md
helm/tester/: Chart.yaml  values.yaml
helm/tester/templates/: test.yaml
mina-aggregator/: Cargo.toml
mina-aggregator/src/: database.rs  main.rs  rocksdb.rs  routes.rs
mina-ipc/: Cargo.toml  build.rs
mina-ipc/src/: lib.rs
mina-ipc/src/message/: buffer.rs  checksum.rs  config.rs  consensus_message.rs  incoming.rs  mod.rs  outgoing.rs
mina-recorder/: Cargo.toml  build.rs  libp2p_ipc.capnp
mina-recorder/src/: application.rs  chunk.rs  connection.rs  custom_coding.rs  event.rs  firewall.rs  key_recover.rs  lib.rs  ptrace.rs  recorder.rs  server.rs  snark_worker.rs  stats.rs  stats_test.rs  strace.rs  tester.rs
mina-recorder/src/connection/: accumulator.rs  chunk.rs  logger.rs  mod.rs  mplex.rs  mplex_.rs  multistream_select.rs  mux.rs  noise.rs  pnet.rs  yamux.rs
mina-recorder/src/connection/mina_protocol/: kademlia.proto  kademlia.rs  meshsub.rs  mod.rs  rpc.rs  tag_0.hex  tag_1.hex
mina-recorder/src/connection/test_data/: connection000002b1
mina-recorder/src/database/: core.rs  index.rs  mod.rs  params.rs  rocksdb.rs  server.rs  sorted_intersect.rs  types.rs
mina-recorder/src/decode/: envelope.proto  example.ron  identify.hex  identify.proto  identify.rs  json_string.rs  kademlia.rs  meshsub.rs  meshsub_stats.rs  mod.rs  noise.rs  rpc.rs  structs.proto  test_data_2.hex  test_data_3.hex  utils.rs  yamux.rs
mina-recorder/src/libp2p_helper/: mod.rs
mina-recorder/src/test_data/: block_03d1a805254741ed5ad8b056e64b121f465323041d1f41d9df3db58b87670460  block_1a57e382e918e0cde7cdd7493cf9b6b755299a785c1b97ddc2bc1cf66e91e647  block_39d63b37380263554597863394aef559c4311319cc8cfccf90f739b08ea06c1d  block_6063535b2a4ab0f24b7de5068433fbbfe46f0dd98b8cc840803001da97c342f7  block_628027a23d24bab19adff7d97548ef85b1b2a71713aecd199d7763528c4af46c  block_834b7710b0f417eded6ff03d84c05235f4d3ba9dc9bb8f3fb5802bd6bc37ea4c  block_c6aad01e8613fc9dcd054a813f65bccb9275a2867334157251a7522d7d5d7155  block_ce3d9a6bcd2ef647e1b3c51c0158a16c4062afd779dc1df6f3cc8e5f3880cb73  rpc_7843
simulator/: Cargo.toml  docker-compose.yml
simulator/src/: lib.rs  libp2p_helper.rs
simulator/src/peer/: behavior.rs  main_behavior.rs  mod.rs  split_behavior.rs  tcpflow.rs  tests.rs
simulator/src/registry/: messages.rs  mod.rs  server.rs  state.rs  tests.rs
tester/: Cargo.toml
tester-k/: Cargo.toml
tester-k/src/: center.rs  conntrack.rs  constants.rs  lib.rs  libp2p_helper.rs  message.rs  netstat.rs  peer.rs  tcpflow.rs  test_state.rs
tester-k/src/peer_behavior/: data.json  mod.rs
tester/src/: main.rs
topology-tool/: Cargo.toml
topology-tool/src/: main.rs
