[package]
name = "bpf-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "MIT"

[lib]
name = "bpf_recorder"
path = "src/lib.rs"

[[bin]]
name = "bpf-recorder-kern"
path = "src/main.rs"
required-features = ["kern"]

[[bin]]
name = "bpf-recorder"
path = "src/main.rs"
required-features = ["user"]

[dependencies]
ebpf-kern = { git = "https://github.com/vlad9486/ebpf-tools", optional = true }
typenum = { version = "1.15", optional = true }
ebpf-user = { git = "https://github.com/vlad9486/ebpf-tools", optional = true }
sudo = { version = "0.6.0", optional = true }
ctrlc = { version = "3.2", optional = true }
log = { version = "0.4.17", optional = true }
env_logger = { version = "0.9.0", default-features = false, optional = true }
hex = { version = "0.4.3", optional = true }
libbpf-sys = { version = "0.8.1+v0.8.0", optional = true }

# local
bpf-ring-buffer = { version = "=0.1.0", path = "../bpf-ring-buffer", optional = true }
mina-recorder = { path = "../mina-recorder", optional = true }

[features]
default = ["user"]
kern = ["ebpf-kern/macros", "typenum"]
user = [
    "ebpf-user/macros",
    "sudo",
    "ctrlc/termination",
    "log",
    "env_logger",
    "hex",
    "bpf-ring-buffer",
    "mina-recorder",
    "libbpf-sys",
]
client = []
