[package]
name = "bpf-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "MIT"

[lib]
name = "bpf_recorder"
path = "src/lib.rs"

[[bin]]
name = "bpf-recorder-kern"
path = "src/main.rs"
required-features = ["kern"]

[[bin]]
name = "bpf-recorder"
path = "src/main.rs"
required-features = ["user"]

[dependencies]
ebpf-kern = { git = "https://github.com/vlad9486/ebpf-tools", optional = true }
typenum = { version = "1.15", optional = true }
ebpf-user = { git = "https://github.com/vlad9486/ebpf-tools", optional = true }
ctrlc = { version = "3.2", optional = true }
log = { version = "0.4.17", optional = true }
env_logger = { version = "0.10.0", default-features = false, optional = true }
hex = { version = "0.4.3", optional = true }
libbpf-sys = { version = "1.0.4", optional = true }
libc = { version = "0.2.138", optional = true }
network-types = { version = "0.0.4", optional = true }

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
reqwest = { version = "0.11.14", features = ["blocking"], optional = true }

# local
bpf-ring-buffer = { version = "=0.1.0", path = "../bpf-ring-buffer", optional = true }
mina-recorder = { path = "../mina-recorder", optional = true }
simulator = { path = "../simulator", optional = true }

[features]
default = ["user"]
kern = ["ebpf-kern/macros", "typenum", "network-types"]
user = [
    "ebpf-user/macros",
    "ctrlc/termination",
    "log",
    "env_logger",
    "hex",
    "bpf-ring-buffer",
    "mina-recorder",
    "libbpf-sys",
    "libc",
    "serde",
    "serde_json",
    "reqwest",
    "simulator",
]
client = []
