[package]
name = "mina-aggregator"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "MIT"

[dependencies]
# reqwest = { version = "0.11.13", features = ["blocking"] }
# url = { version = "2.3.1" }
env_logger = { version = "0.10.0", default-features = false }
ctrlc = { version = "3.2" }

tokio = { version = "1.22", features = ["rt-multi-thread"] }
warp = { version = "0.3.3", features = ["tls"] }
log = { version = "0.4.17" }
thiserror = { version = "1.0" }

rocksdb = { version = "0.19.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
radiation = { git = "https://github.com/vlad9486/radiation" }

libp2p-core = { version = "0.38.0" }
# dns-lookup = { version = "1.0" }

mina-recorder = { path = "../mina-recorder" }
