[package]
name = "mina-aggregator"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "MIT"

[dependencies]
# reqwest = { version = "0.11.13", features = ["blocking"] }
# url = { version = "2.3.1" }
env_logger = { version = "0.11.3", default-features = false }
ctrlc = { version = "3.4.4" }

tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
warp = { version = "0.3.7", features = ["tls"] }
log = { version = "0.4.22" }
thiserror = { version = "1.0" }

rocksdb = { version = "0.21.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
radiation = { git = "https://github.com/vlad9486/radiation" }

libp2p-core = { version = "0.41.3", features = ["serde"] }
# dns-lookup = { version = "1.0" }

mina-recorder = { path = "../mina-recorder" }
