[package]
name = "mina-ipc"
version = "0.1.0"
edition = "2021"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
rust-version = "1.65.0"
license = "MIT"

[build-dependencies]
capnpc = { version = "0.15.2" }

[dependencies]
crc64 = { version = "2.0" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs.git", branch = "new-types-feb-23" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }
capnp = { version = "0.15.2" }
blake2 = { version = "0.10.5" }
hex = { version = "0.4.3" }
serde = { version = "1.0" }

[features]
dump = []
