[package]
name = "mina-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.58.1"
license = "MIT"

[[bin]]
name = "mina-viewer"
path = "src/bin/mina-viewer.rs"

[build-dependencies]
prost-build = { version = "0.11.3" }

[dependencies]
log = { version = "0.4.17" }
hex = { version = "0.4.3" }
time = { version = "0.3.17", features = ["formatting"] }
unsigned-varint = { version = "0.7.1" }
multiaddr = { version = "0.16.0" }
strace-parse = { git = "https://github.com/name-placeholder/strace-parse.rs.git" }
bitflags = { version = "1.3" }

prost = { version = "0.11.3" }
mina-p2p-messages = { git = "https://github.com/name-placeholder/mina-p2p-messages-rs.git", rev = "7d285766271d4800821333bc03ecff2f7f501ae7" }
binprot = { git = "https://github.com/name-placeholder/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }

salsa20 = { version = "0.10.2" }
blake2 = { version = "0.10.5" }
curve25519-dalek = { version = "3.2" }
sha2 = { version = "0.10.6" }
chacha20poly1305 = { version = "0.10.1" }
vru-noise = { version = "1.5" }

rocksdb = { version = "0.19.0", default-features = false }
radiation = { git = "https://github.com/vlad9486/radiation" }
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
itertools = { version = "0.10.5" }

tokio = { version = "1.22", features = ["rt-multi-thread"] }
warp = { version = "0.3.3", features = ["tls"] }

libp2p-core = { version = "0.38.0", features = ["secp256k1", "ecdsa", "serde"] }
# ed25519-dalek = { version = "*" }

pete = { version = "0.9.0" }
