[package]
name = "mina-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.65.0"
license = "MIT"

[[bin]]
name = "mina-viewer"
path = "src/bin/mina-viewer.rs"

[build-dependencies]
prost-build = { version = "0.11.3" }
capnpc = { version = "0.15.1" }

[dependencies]
log = { version = "0.4.17" }
hex = { version = "0.4.3" }
base64 = { version = "0.20.0" }
time = { version = "0.3.17", features = ["formatting"] }
unsigned-varint = { version = "0.7.1" }
multiaddr = { version = "0.16.0" }
strace-parse = { git = "https://github.com/openmina/strace-parse.rs.git" }
bitflags = { version = "1.3" }
bs58 = { version = "0.4", features = ["check"] }
structopt = { version = "0.3.26" }

prost = { version = "0.11.3" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs.git", branch = "new-types-feb-23" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }
capnp = { version = "0.15.2" }

salsa20 = { version = "0.10.2" }
blake2 = { version = "0.10.5" }
curve25519-dalek = { version = "3.2" }
sha2 = { version = "0.10.6" }
chacha20poly1305 = { version = "0.10.1" }
vru-noise = { version = "1.5" }

rocksdb = { version = "0.19.0", default-features = false }
radiation = { git = "https://github.com/vlad9486/radiation" }
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
itertools = { version = "0.10.5" }
parking_lot = { version = "0.12.1" }

tokio = { version = "1.22", features = ["rt-multi-thread"] }
warp = { version = "0.3.3", features = ["tls"] }
reqwest = { version = "0.11.13", features = ["blocking"] }

libp2p-core = { version = "0.38.0", features = ["secp256k1", "ecdsa", "serde"] }
# ed25519-dalek = { version = "*" }

pete = { version = "0.9.0" }

ebpf-user = { git = "https://github.com/vlad9486/ebpf-tools" }
libbpf-sys = { version = "1.0.4" }

[dev-dependencies]
temp-dir = "0.1.11"
