[package]
name = "mina-recorder"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@viablesystems.io>"]
edition = "2021"
rust-version = "1.65.0"
license = "MIT"

[[bin]]
name = "mina-viewer"
path = "src/bin/mina-viewer.rs"

[build-dependencies]
prost-build = { version = "0.11.9" }
capnpc = { version = "0.15.1" }

[dependencies]
log = { version = "0.4.22" }
hex = { version = "0.4.3" }
base64 = { version = "0.22.1" }
time = { version = "0.3.36", features = ["formatting"] }
unsigned-varint = { version = "0.8.0" }
multiaddr = { version = "0.18.1" }
strace-parse = { git = "https://github.com/openmina/strace-parse.rs.git" }
bitflags = { version = "1.3" }

prost = { version = "0.13.1" }
mina-p2p-messages = { git = "https://github.com/openmina/openmina.git", rev = "6fb148ba06153a6497173e62bae1a67323fe5f92" }
capnp = { version = "0.15.2" }

salsa20 = { version = "0.10.2" }
blake2 = { version = "0.10.6" }
curve25519-dalek = { version = "3.2" }
sha2 = { version = "0.10.8" }
chacha20poly1305 = { version = "0.10.1" }
vru-noise = { version = "1.5" }

rocksdb = { version = "0.21.0", default-features = false }
radiation = { git = "https://github.com/vlad9486/radiation" }
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
itertools = { version = "0.13.0" }
parking_lot = { version = "0.12.3" }

tokio = { version = "1.38", features = ["rt-multi-thread"] }
warp = { version = "0.3.7", features = ["tls"] }
reqwest = { version = "0.12.5", features = ["blocking"] }

libp2p-core = { version = "0.41.3", features = ["serde"] }
libp2p-identity = { version = "0.2.9", features = ["ed25519", "secp256k1", "ecdsa"] }

pete = { version = "0.12.0" }

ebpf-user = { git = "https://github.com/vlad9486/ebpf-tools" }
libbpf-sys = { version = "1.4.2" }

[dev-dependencies]
temp-dir = "0.1.13"
