[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# system
structopt = { version = "0.3.26" }
env_logger = { version = "0.11.3", default-features = false }
anyhow = { version = "1.0" }
signal-hook = { version = "0.3.17" }
nix = { version = "0.28.0" }

# utils
log = { version = "0.4.22" }
hex = { version = "0.4.3" }
roxmltree = { version = "0.20.0" }
time = { version = "0.3.36", features = ["parsing", "formatting"] }
rand = { version = "0.8.5" }

# graph
petgraph = { version = "0.6.5" }

# http
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
warp = { version = "0.3.7" }
reqwest = { version = "0.12.5", features = ["blocking"] }

# mina
mina-ipc = { path = "../mina-ipc" }
