[package]
name = "tester-k"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3.26" }
log = { version = "0.4.17" }
nix = { version = "0.26.2" }
signal-hook = { version = "0.3.14" }
env_logger = { version = "0.10.0" }
anyhow = { version = "1.0" }
hex = { version = "0.4.3" }
rand = { version = "0.8.5" }

# http
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.23", features = ["rt-multi-thread"] }
warp = { version = "0.3.3", features = ["tls"] }
reqwest = { version = "0.11.14", features = ["blocking"] }

mina-ipc = { path = "../mina-ipc" }
