[package]
name = "topology-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3.26" }
env_logger = { version = "0.10.0" }
anyhow = { version = "1.0" }
time = { version = "0.3.20", features = ["parsing", "formatting"] }

log = { version = "0.4.17" }
reqwest = { version = "0.11.14", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
petgraph = { version = "0.6.3" }
